@@ -482,6 +482,7 @@ public class CoreContainer
 
     for (int i=0; i<nodes.getLength(); i++) {
       Node node = nodes.item(i);
+      SolrCore core = null;
       try {
         String rawName = DOMUtil.getAttr(node, CORE_NAME, null);
         if (null == rawName) {
@@ -526,7 +527,7 @@ public class CoreContainer
 
         p.setCoreProperties(readProperties(cfg, node));
 
-        SolrCore core = create(p);
+        core  = create(p);
         register(name, core, false);
         
         // track original names
@@ -534,6 +535,9 @@ public class CoreContainer
       }
       catch (Throwable ex) {
         SolrException.log(log,null,ex);
+        if (core != null) {
+          core.close();
+        }
       }
     }
   }
